--- a/condorshop/frontend/package.json
+++ b/condorshop/frontend/package.json
@@ -11,12 +11,12 @@
     "check:validations": "node scripts/check-validations-imports.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.66.0",
     "react-router-dom": "^6.26.0",
-    "axios": "^1.7.7",
-    "zustand": "^4.5.5",
-    "react-hook-form": "^7.53.0"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
@@ -29,11 +29,6 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^7.1.12"
+    "vite": "^7.2.1"
   }
 }
-
-
-
-
-
